<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity"
    android:background="@drawable/background_off_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="117dp"
            android:layout_height="59dp"
            android:contentDescription="@string/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-12dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getData"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="100dp"
                android:linksClickable="true"
                android:id="@+id/getTheData">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploadData"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="100dp"
                android:linksClickable="true">

            </TextView>

        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>